# cc-test

./: cookiecutter.json  rt-cookiecutter.json  schema.json
rt_admin_cc/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
rt_admin_cc/.github/: ISSUE_TEMPLATE.md
rt_admin_cc/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
rt_admin_cc/src/rt_admin_cc/: __init__.py  cli.py
rt_admin_cc/tests/: __init__.py  test_rt_admin_cc.py
