[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rt_admin_cc"
version = "0.1.0"
description = "A cookiecutter template for creating a Python package with a CLI"
readme = "README.rst"
authors = [
  {name = "Andriy Podolian", email = "andrew@regulus.team"}
]
maintainers = [
  {name = "Andriy Podolian", email = "andrew@regulus.team"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/andriy_podolian/rt_admin_cc/issues"
changelog = "https://github.com/andriy_podolian/rt_admin_cc/blob/master/changelog.md"
homepage = "https://github.com/andriy_podolian/rt_admin_cc"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

